--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 3000
 MONGODB_URI = mongodb://localhost:27017/foodApp
 JWT_SECRET = rahulghosh17903
-RAZORPAY_KEY_SECRET = g5G55Hqo9c67WSwPXZ5I5YnD
-RAZORPAY_KEY_ID = rzp_test_Lgmg5HptrCarow
+RAZORPAY_KEY_SECRET = Your_razorpay_secret
+RAZORPAY_KEY_ID = your_razorpay_key_id
